@@ -51,6 +51,10 @@ tasks.withType<JavaCompile>().all {
     options.compilerArgs = listOf("--enable-preview")
 }
 
+tasks.withType<JavaExec>().all {
+    jvmArgs("--enable-preview")
+}
+
 tasks.withType<Test>().all {
     jvmArgs("--enable-preview")
 }
